comphdl: Add links to other parts

--- a/_posts/2018-02-14-comphdl-02.md
+++ b/_posts/2018-02-14-comphdl-02.md
@@ -524,7 +524,7 @@ friendly.
 If you want to see the full implementation, the code is available online:
 [Playground link](https://play.rust-lang.org/?gist=df93c98138901f065d43c1eb57afabe2)
 
-Other posts:
+# Other posts
 
 [Part 1]({{ site.baseurl }}/comphdl-01)
 [Part 3]({{ site.baseurl }}/comphdl-03) // TODO: write part 3
