--- a/_posts/2018-02-14-comphdl-02.md
+++ b/_posts/2018-02-14-comphdl-02.md
@@ -518,7 +518,7 @@ finding them would require a sophisticated analysis of the circuit as a whole.
 # Conclusion
 
 That should be enough for now. In the next post we will improve the simulation
-experience, because looking at a series of `[L] = `[H]` lines isn't very user
+experience, because looking at a series of `[L] = [H]` lines isn't very user
 friendly.
 
 If you want to see the full implementation, the code is available online:
