--- a/_posts/2018-02-14-comphdl-02.md
+++ b/_posts/2018-02-14-comphdl-02.md
@@ -7,7 +7,7 @@ In this post we will define the architecture of the simulator.
 
 # Previous posts
 
-[Part 1]({{ site.baseurl }}/comphdl-01)
+[Part 1]({{ site.baseurl }}/2018/02/08/comphdl-01.html)
 
 The first post was a short introduction to digital logic and Rust, we created a
 NAND gate, and used it to build an OR gate. But the connections between gates
@@ -526,5 +526,5 @@ If you want to see the full implementation, the code is available online:
 
 # Other posts
 
-[Part 1]({{ site.baseurl }}/comphdl-01)
+[Part 1]({{ site.baseurl }}/2018/02/08/comphdl-01.html)
 [Part 3]({{ site.baseurl }}/comphdl-03) // TODO: write part 3
