Add link to part 3

--- a/_posts/2018-02-14-comphdl-02.md
+++ b/_posts/2018-02-14-comphdl-02.md
@@ -527,4 +527,4 @@ If you want to see the full implementation, the code is available online:
 # Other posts
 
 [Part 1]({{ site.baseurl }}/2018/02/08/comphdl-01.html)
-[Part 3]({{ site.baseurl }}/comphdl-03) // TODO: write part 3
+[Part 3]({{ site.baseurl }}/2018/04/06/comphdl-03.html)
