Add link to github repo

--- a/_posts/2018-04-06-comphdl-03.md
+++ b/_posts/2018-04-06-comphdl-03.md
@@ -400,8 +400,27 @@ These and more options will be explored in more detail in a future post.
 # <a name="conclusion"></a>Conclusion
 
 We can run simulations, write the results to a file, open that file with a
-wave viewer, and even view the components as a svg. In the next post we will
-play a little more with the multiplexer.
+wave viewer, and even view the components as a svg.
+
+The code is available on github, but you will need to install
+[rust](https://rustup.rs/)
+and
+[GTKWave](http://gtkwave.sourceforge.net/)
+to try it out.
+The github repository also contains the code for future posts, so if you don't
+want to spoil yourself, download the source from
+[here](https://github.com/Badel2/comphdl/archive/blog-03.zip)
+, or just browse the `blog-03` tag:
+https://github.com/Badel2/comphdl/tree/blog-03
+
+To try it out you just need to run `cargo run` inside
+the directory, which will generate a foo.vcd file which can be opened with
+GTKWave. The program will also output the JSON netlist of the XOR2, which can
+be copy-pasted to the
+[online netlistsvg demo](https://nturley.github.io/netlistsvg/)
+.
+
+In the next post we will play a little more with the multiplexer.
 
 // TODO: write Part 4
 
