site baseurl links

--- a/_posts/2018-04-06-comphdl-03.md
+++ b/_posts/2018-04-06-comphdl-03.md
@@ -7,8 +7,8 @@ In this post we will improve the simulation experience.
 
 # Previous posts
 
-[Part 1](https://badel2.github.io/2018/02/08/comphdl-01.html)
-[Part 2](https://badel2.github.io/2018/02/14/comphdl-02.html)
+[Part 1]({{ site.baseurl }}/2018/02/08/comphdl-01.html)
+[Part 2]({{ site.baseurl }}/2018/02/14/comphdl-02.html)
 
 # Introduction
 
