Add link to part 4

--- a/_posts/2018-04-06-comphdl-03.md
+++ b/_posts/2018-04-06-comphdl-03.md
@@ -422,7 +422,7 @@ be copy-pasted to the
 
 In the next post we will play a little more with the multiplexer.
 
-// TODO: write Part 4
+[Part 4]({{ site.baseurl }}/2018/04/07/comphdl-04.html)
 
 # <a name="appendix1"></a>Appendix 1: VCD
 
