--- a/_posts/2018-04-07-comphdl-04.md
+++ b/_posts/2018-04-07-comphdl-04.md
@@ -3,7 +3,7 @@ layout: post
 title: Writing a digital logic simulator - Part 4
 ---
 
-The power of the multiplexer
+Here we use the multiplexer to create a new logic gate.
 
 # Previous posts
 
