Add link to github

--- a/_posts/2018-04-07-comphdl-04.md
+++ b/_posts/2018-04-07-comphdl-04.md
@@ -340,6 +340,7 @@ be about 60 lines long, so we really need a better way to define components.
 
 # Conclusion
 The simulator now has port names, in the next post we will actually use them
-to define components.
+to define components. As always, you can check the code on
+[github](https://github.com/Badel2/comphdl/tree/blog-04).
 
 // TODO: write part 5
