Add commands required to clone and run the code

--- a/_posts/2018-05-27-comphdl-05.md
+++ b/_posts/2018-05-27-comphdl-05.md
@@ -585,7 +585,23 @@ parser? And the best part is that we don't need to recompile every time we want
 to test a new component, which is important because now compiling is starting
 to take a while.
 
-See
+As always, the code is available on
+[github](https://github.com/Badel2/comphdl/tree/blog-05)
+. To run it:
+
+```
+git clone https://github.com/Badel2/comphdl
+cd comphdl
+git checkout blog-05
+cargo run -- test.txt Demux_1_4
+```
+
+This will simulate the "Demux\_1\_4" component from the "test.txt" file, and
+generate a "foo.vcd" file (which can be opened with gtkwave), and will print
+many things to stdout, the last line beign the JSON netlist that can be pasted
+to netlistsvg to generate the graphical view of the component.
+
+See also
 [appendix 1](#appendix1)
 for some ideas for the future of the language.
 
