--- a/_posts/2018-05-27-comphdl-05.md
+++ b/_posts/2018-05-27-comphdl-05.md
@@ -11,7 +11,7 @@ Links to previous posts:
 [Part 1]({{ site.baseurl }}/2018/02/08/comphdl-01.html)
 [Part 2]({{ site.baseurl }}/2018/02/14/comphdl-02.html)
 [Part 3]({{ site.baseurl }}/2018/04/06/comphdl-03.html)
-[Part 4]({{ site.baseurl }}/2018-04-07-comphdl-04.html)
+[Part 4]({{ site.baseurl }}/2018/04/07/comphdl-04.html)
 
 We have a working digital logic simulator: we can create components and
 run simulations, however creating components is a pain.
