--- a/_posts/2018-04-07-comphdl-04.md
+++ b/_posts/2018-04-07-comphdl-04.md
@@ -343,5 +343,5 @@ The simulator now has port names, in the next post we will actually use them
 to define components. As always, you can check the code on
 [github](https://github.com/Badel2/comphdl/tree/blog-04).
 
-[Part 5]({{ site.baseurl }}/2018-05-27-comphdl-05.html)
+[Part 5]({{ site.baseurl }}/2018/05/27/comphdl-05.html)
 
