--- a/_posts/2018-05-30-comphdl-06.md
+++ b/_posts/2018-05-30-comphdl-06.md
@@ -5,6 +5,20 @@ title: Writing a digital logic simulator - Part 6
 
 A modular redesign.
 
+# Introduction
+
+Links to previous posts:
+[Part 1]({{ site.baseurl }}/2018/02/08/comphdl-01.html)
+[Part 2]({{ site.baseurl }}/2018/02/14/comphdl-02.html)
+[Part 3]({{ site.baseurl }}/2018/04/06/comphdl-03.html)
+[Part 4]({{ site.baseurl }}/2018/04/07/comphdl-04.html)
+[Part 5]({{ site.baseurl }}/2018/05/27/comphdl-05.html)
+
+In the last post we added a parser to the simulator, so maybe it's time
+to structure the code.
+
+# Modules
+
 The files of the simulator are:
 
 ```
@@ -41,8 +55,9 @@ mod bit;
 And then you can either create a `bit.rs` file in the same directory, or create
 a `bit/` directory and add a `bit/mod.rs` file.
 
-Let's begin. The main function parses the command-line arguments:
+Let's see the result.
 
+The main function parses the command-line arguments:
 
 ```rust
 fn main(){
@@ -94,6 +109,11 @@ pub fn parse_file(filename: &str, top: &str) -> Box<Component> {
     mux
 }
 ```
+
+This is the real `parse_file`, it calls the `FileParser` that is generated
+by LALRPOP, and returns a `(CompInfo, Vec<CompInfo>)`.
+
+# ComponentFactory
 
 ```rust
 pub struct ComponentFactory {
@@ -154,7 +174,7 @@ component Buf2(a) -> a1 {
 Then the signals hashmap will contain two indexes in the entry for "a0":
 it's the output of Buf(a), and also the input of Buf(a0). Then we just need to
 verify that there is only one output connected to a0 (in this case Buf(a)), because
-that's our way to avoid short-circuits.
+that's our way to avoid short-circuits, and finally add a connection from Buf(a).output0 to Buf(a0).input0.
 
 So now we have a `ComponentFactory`, how do we create the `Component`s?
 
@@ -214,7 +234,7 @@ component Nand4(a, b, c, d) -> x {
 ```
 
 Oh yeah, that's a problem, since the `emit_json.rs` code only works on
-`Structural`, because `Component`s don't necessarily have any connections.  As
+`Structural`, because `Component`s don't necessarily have any connections. As
 a reminder, `Component` is a trait and `Structural` implements that trait,
 `Nand` and `ConstantBit` also implement it. We can't downcast the `Component`
 to `Structural`, because it may be a `Nand` instead, so a nice hack is to add
@@ -263,16 +283,21 @@ We manually implement `Clone` for a boxed component, which relies on the
 one line of code.
 
 For future reference, if you ever find yourself doing stuff like that, then
-your code is horribly wrong. In my case I will try to fix that in the future.
+your code is horribly wrong. In my case I will try to fix that some day.
+
+# Avoiding duplication
 
 Now that we introduced the `ComponentFactory`, that should be a main
 feature, so let's rebuild the simulator arround it. Let's begin with the
 components. Right now every instance of every component stores its name
-and its port names, but that isn't necesary, we could store that data in
-a common list. Such a list already exists, it's the `components` field in
-the `ComponentFactory`. Actually, we don't even need to store the connections
-since they also are common. We can just store a reference to the definition of
-this component. That would leave the `Structural` as just:
+and its port names, so if we create 100 `Demux_4_1` its name and port names
+will be stored 100 times in memory.
+
+That isn't necesary, we could store that data in a common place. Such a place
+already exists, it's the `components` field in the `ComponentFactory`.
+Actually, we don't even need to store the connections since they also are
+common. We can just store a reference to the definition of this component. That
+would leave the `Structural` as just:
 
 ```rust
 struct Structural {
@@ -304,7 +329,7 @@ pub struct ComponentFactory {
 ```
 
 Luckly we can transform a `HashMap<K, V>` into a `HashMap<K, Rc<V>>` using
-a one-liner:
+the `into_iter/map/collect` combo:
 
 ```rust
 let components = components.into_iter().map(|(k, v)| (k, Rc::new(v))).collect();
@@ -315,9 +340,10 @@ And magically the code compiles.
 
 To change the `Structural` we need to do many things, but there is a small
 problem with the connections. `Rc<CompDefinition>` stores the connections as a
-HashMap, so we cannot iterate over all the connections of a component. Well, we
-can but it won't be as efficient as a vector. So for now let's just store the
-connections as a `Vec` instead of using a `Rc`. This will allow a small optimization:
+HashMap, and we cannot iterate over all the connections of a component when
+using a hashmap. Well, we can but it won't be as efficient as a vector. So for
+now let's just store the connections as a `Vec` instead of using a `Rc`. This
+will allow a small optimization:
 
 ```rust
 fn propagate(&mut self, c_id: usize) {
@@ -345,7 +371,9 @@ in `Structural` instead, this problem disappears:
 This is important, because if you think about it, `CompIo` is a component's
 interface, so it must know the connections, but the connections are represented
 as indexes which can only be used by the `Structural`, so it makes more sense
-to store them independently.
+to store them outside the `CompIo`.
+
+# Dirty components
 
 While we are at it, let's add another simple optimization. Currently, we update
 everything every time. But most of the time, if one component's input doesn't
@@ -359,6 +387,11 @@ fn needs_update(&self) -> bool {
     true
 }
 ```
+
+This allows components to avoid being updated when it isn't necessary. A component
+will always be updated when its inputs change. But when they don't change, we
+ask the component if it needs an update. If it doesn't, it basically goes to sleep
+until some input signal changes.
 
 The default is that a component will always be updated, and we must opt-in to
 this optimization.
@@ -462,9 +495,11 @@ pub fn update(&mut self) {
 Nice optimizations, let's do some benchmarks. We are only interested in the
 simulation time, but let's just make it very long, that should be enough. I run
 a simulation for 4 million ticks, which would generate about 1 GB of data in
-vcd format so it's important to not save it.
+vcd format so it's important to not save it. The component will be the
+demultiplexer from last post.
 
-Thanks to the magic of version control we can go back in time.
+And thanks to the magic of version control we can go back in time and run the
+same "benchmark" in the old version:
 
 ```
 git checkout blog-05
@@ -473,7 +508,30 @@ time !!
 git checkout master
 ```
 
-| Results    | 1         | 5         | 50        | 500       |
-|-----|-----------|-----------|-----------|-----------|
-| Old | 0m55,264s | 0m55,240s | 0m54,302s | 0m53,755s |
-| New | 0m45,917s | 0m43,273s | 0m37,377s | 0m39,264s |
+Here is a table comparing the results:
+
+| T        | 1         | 5         | 50        | 500       |
+|----------|-----------|-----------|-----------|-----------|
+| Old      | 0m55,264s | 0m55,240s | 0m54,302s | 0m53,755s |
+| New      | 0m45,917s | 0m43,273s | 0m37,377s | 0m39,264s |
+
+I changed one parameter to better see the real improvement: T.  The input
+remains constant during "T" ticks, and obviously when the input remains
+constant for a longer time, the component updates will be less frequent, so the
+dirty component optimization kicks in. Note that even when the input changes
+every tick (T=1), there are still bits which don't change:
+
+```
+0000
+0001
+0010
+0011
+```
+
+The 2nd input from the right changes every 2T, the 3rd every 4T, etc, so the
+optimization also helps in that case.
+
+Also note that the time is that of 4 million ticks, so 1 tick is about 0.011 ms
+for this simple component. If we ever want to run an interactive simulation at
+a standard 60 fps (16.6 ms per tick), we could simulate more than 1000
+components! At least in theory.
