--- a/_posts/2018-05-30-comphdl-06.md
+++ b/_posts/2018-05-30-comphdl-06.md
@@ -535,3 +535,9 @@ Also note that the time is that of 4 million ticks, so 1 tick is about 0.011 ms
 for this simple component. If we ever want to run an interactive simulation at
 a standard 60 fps (16.6 ms per tick), we could simulate more than 1000
 components! At least in theory.
+
+# Conclusion
+
+So yeah, this project is starting to grow, but there's still many things to do.
+
+// TODO write part 7
