Add link to part 6

--- a/_posts/2018-05-27-comphdl-05.md
+++ b/_posts/2018-05-27-comphdl-05.md
@@ -607,7 +607,8 @@ for some ideas for the future of the language.
 
 In the next post we will go through the
 code that creates the `Component`s from the parsed `CompInfo`.
-// TODO: Write part 6
+
+[Part 6]({{ site.baseurl }}/2018/05/30/comphdl-06.html)
 
 # <a name="appendix1"></a>Appendix 1 - Syntax improvements
 
