Write part 7, web demo!

--- a/_posts/2018-05-30-comphdl-06.md
+++ b/_posts/2018-05-30-comphdl-06.md
@@ -540,4 +540,9 @@ components! At least in theory.
 
 So yeah, this project is starting to grow, but there's still many things to do.
 
-// TODO write part 7
+The source code is available here:
+
+<https://github.com/Badel2/comphdl/tree/blog-06>
+
+
+[Part 7]({{ site.baseurl }}/2018/07/19/comphdl-07.html)
