--- a/_posts/2018-07-19-comphdl-07.md
+++ b/_posts/2018-07-19-comphdl-07.md
@@ -393,9 +393,11 @@ js! {
 So if we want to set the signal with id 5 to the color red, we can add the
 following line to the style tag:
 
+{% raw %}
 ```
 .wire_port5_s0 {{ stroke: #FF0000; stroke-width: 3; }}
 ```
+{% endraw %}
 
 This is probably a performance trap, since at every tick (30 times per second)
 the stylesheet is modified and the browser has to recalculate all the values,
