Add link to next part

--- a/_posts/2018-07-19-comphdl-07.md
+++ b/_posts/2018-07-19-comphdl-07.md
@@ -477,9 +477,11 @@ git checkout blog-07
 cd netlistsvg
 npm run build-badel
 cd ..
-cargo-web deploy --features stdweb
+cargo +nightly web deploy --features stdweb
 cd target/deploy
 python2 -m SimpleHTTPServer
 ```
 
-// TODO: write part 8
+Continue reading:
+[Part 8]({{ site.baseurl }}/2018/09/10/comphdl-08.html)
+.
