Add links to demo

--- a/_posts/2018-09-10-comphdl-08.md
+++ b/_posts/2018-09-10-comphdl-08.md
@@ -302,9 +302,22 @@ but I managed to integrate it so there it is.
 Unfortunately this means slower load times for the demo, but I guess most
 people have a better internet connection than me so they won't mind.
 
+I have also added basic support for GET parameters in the URL, so
+we can share code by adding `?code=component asdf() { ... }` to the URL.
+
+Other supported parameters are `top`, which sets the top component name,
+and `example` which automatically loads an example. Nothing too complicated
+yet.
+
 # Conclusion
 
 Now with arrays, we can create bigger circuits a lot easier.
 I hope that soon we will begin to create some bigger examples to fully
 test the language.
 
+Start playing with the demo:
+<https://badel2.github.io/comphdl/demo/v08/>
+
+You can play with the code from this post by clicking
+[here](https://badel2.github.io/comphdl/demo/v08/?example=srlatch.txt)
+.
