Add link to part 09

--- a/_posts/2018-09-10-comphdl-08.md
+++ b/_posts/2018-09-10-comphdl-08.md
@@ -321,3 +321,5 @@ Start playing with the demo:
 You can play with the code from this post by clicking
 [here](https://badel2.github.io/comphdl/demo/v08/?example=srlatch.txt)
 .
+
+[Part 8]({{ site.baseurl }}/2018/10/02/comphdl-09.html)
