Fix link formatting

--- a/_posts/2018-10-02-comphdl-09.md
+++ b/_posts/2018-10-02-comphdl-09.md
@@ -18,7 +18,7 @@ Links to previous posts:
 [Part 8]({{ site.baseurl }}/2018/09/10/comphdl-08.html)
 
 While browsing through
-[https://codegolf.stackexchange.com/](code golf)
+[code golf](https://codegolf.stackexchange.com)
 I realized that it would be nice if I could solve some of the
 challenges using comphdl, if you can call that a programming language.
 However, most of the challenges require to read an input and return
