--- a/_posts/2018-10-02-comphdl-09.md
+++ b/_posts/2018-10-02-comphdl-09.md
@@ -338,3 +338,5 @@ Paste some large string into "STDIN", press enable, and enjoy!
 
 <https://badel2.github.io/comphdl/demo/v09/?example=cat.txt&top=Cat>
 
+[Part 9]({{ site.baseurl }}/2019/02/03/comphdl-10.html)
+
